src/tests/Loader/classloader/StaticVirtualMethods/NegativeTestCases/AmbiguousImplementationException.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <DebugType>Full</DebugType>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="AmbiguousImplementationException.il" />
  </ItemGroup>
</Project>
